--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -147,7 +147,7 @@ body.dark-theme{
 .profile__perfil{
   width: 100px;
   height: 100px;
-  background-color: var(--first-color-alt);
+  background-color: var(--first-color);
   border-radius: 50%;
   overflow: hidden;
   display: flex;
@@ -347,13 +347,13 @@ body.dark-theme{
 .skills__title{
   font: var(--h3-font-size);
   text-align: center;
-  margin-bottom: 1.5rem;
+  margin-bottom: 2.5rem;
 }
 
 .skills__box{
   display: flex;
   justify-content: center;
-  column-gap: 3rem;
+  column-gap: 5rem;
 }
 
 .skills__group{
@@ -420,7 +420,7 @@ body.dark-theme{
     row-gap: 1rem;
   }
   .skills__box{
-    column-gap: 1rem;
+    column-gap: 5rem;
   }
 }
 
